# airflow_setup

./: airflow.cfg  password.json  pyproject.toml
config/: airflow copy.cfg  airflow.cfg  airflow_bkp.cfg
dags/: 1_first_dag.py  3_operators.py  airflowTest.py  chngdir.py  stock_market_status.py  test.py  utils.py  yfTicks.py
jobs/: __init__.py  config.yaml  config.yml  main.py  tables.yaml  tables.yml
jobs/schemas/avro/: fastinfo.avsc
jobs/schemas/json/: fastinfo.json
