[project]
name = "airflow-setup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow-providers-apache-hdfs>=4.4.1",
    "apache-airflow-providers-apache-kafka>=1.9.0",
    "apache-airflow-providers-apache-spark>=5.3.0",
    "apache-airflow-providers-git>=0.0.2",
    "apache-airflow-providers-http>=5.3.0",
    "apache-airflow-providers-jdbc>=5.2.0",
    "apache-airflow-providers-trino>=6.2.0",
    "apache-airflow[redis,celery,postgres]==3.0.1",
    "flask-appbuilder>=4.7.0",
    "pandas>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "pyspark==3.5.5",
    "ruff>=0.11.13",
]
